--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="member" data-aos="zoom-in">
-              <div class="pic"><img src="assets/img/team/team-1.jpg" class="img-fluid" style="height:450px" alt=""></div>
+              <div class="pic"><img src="assets/img/team/ishaank.jpeg" class="img-fluid" style="height:450px" alt=""></div>
               <div class="member-info">
                 <h4>Ishaank Chopra</h4>
                 <span>Team Leader</span>
