--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
               <div class="pic"><img src="assets/img/team/ishaank.jpeg" class="img-fluid" style="height:450px" alt=""></div>
               <div class="member-info">
                 <h4>Ishaank Chopra</h4>
-                <span>Team Leader</span>
+                <span>Team Leader and Frontend Developer</span>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -358,7 +358,7 @@
               <div class="pic"><img src="assets/img/team/Eklavya.jpeg" class="img-fluid" style="height:450px"alt=""></div>
               <div class="member-info">
                 <h4>Eklavya Agarwal</h4>
-                <span>Website and App Developer</span>
+                <span>Backend Developer</span>
                 <div class="social">
                   <a href="https://www.linkedin.com/in/eklavya-agarwal-53613b213/"><i class="bi bi-twitter"></i></a>
                   <a href="https://www.linkedin.com/in/eklavya-agarwal-53613b213/"><i class="bi bi-facebook"></i></a>
@@ -374,7 +374,7 @@
               <div class="pic"><img src="assets/img/team/team-3.jpg" class="img-fluid" style="height:450px"alt=""></div>
               <div class="member-info">
                 <h4>Mahir Labib</h4>
-                <span>PPT Designer</span>
+                <span>Facilitator and Business Analyst</span>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -389,7 +389,7 @@
               <div class="pic"><img src="assets/img/team/tanush.jpeg" class="img-fluid" style="height:450px"alt=""></div>
               <div class="member-info">
                 <h4>Tanush Changani</h4>
-                <span>Sportal App's UI/UX Designer</span>
+                <span>UXUI Designer and Digital Marketing</span>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
